--- a/Avis/Avis.Services.Protection/Avis.Services.Protection.csproj
+++ b/Avis/Avis.Services.Protection/Avis.Services.Protection.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.11" />
   </ItemGroup>
 
