--- a/Avis/Avis.API.DataContracts/Avis.API.DataContracts.csproj
+++ b/Avis/Avis.API.DataContracts/Avis.API.DataContracts.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0-rc.2.21480.10" />
   </ItemGroup>
 
