--- a/Avis/Avis.Services.OrganizationModel/Avis.Services.OrganizationModel.csproj
+++ b/Avis/Avis.Services.OrganizationModel/Avis.Services.OrganizationModel.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Avis.API.DataContracts\Avis.API.DataContracts.csproj" />
+  </ItemGroup>
+
 </Project>
