--- a/Avis/Avis.Services.DataConsultion/Avis.Services.DataConsultion.csproj
+++ b/Avis/Avis.Services.DataConsultion/Avis.Services.DataConsultion.csproj
@@ -14,17 +14,13 @@
   <ItemGroup>
     <ProjectReference Include="..\Avis.DB\Avis.DB.csproj" />
     <ProjectReference Include="..\Avis.Services.DT\Avis.Services.DT.csproj" />
-    <ProjectReference Include="..\Avis.Services.OrganizationModel\Avis.Services.OrganizationModel.csproj" />
     <ProjectReference Include="..\Avis.Services.Protection\Avis.Services.Protection.csproj" />
+    <ProjectReference Include="..\Avis.Services.Models\Avis.Services.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include=" Avis.Services.DT.DT.Algorithm" />
-    <Using Include=" Avis.Services.OrganizationModel" />
     <Using Include="Avis.DB.MongoDB" />
-    <Using Include="Avis.Services.DT.DT.PageGroup" />
-    <Using Include="Avis.Services.Protection.HashAlgorithm" />
-    <Using Include="Avis.Services.Protection.HashAlgorithmPageGroup" />
+    <Using Include="Avis.Services.Protection.EncryptionAlgorithm.Encryption" />
     <Using Include="MongoDB.Driver" />
     <Using Include="MongoDB.Driver.Linq" />
   </ItemGroup>
