--- a/Avis/Avis.Services.DT/Avis.Services.DT.csproj
+++ b/Avis/Avis.Services.DT/Avis.Services.DT.csproj
@@ -6,4 +6,10 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Konscious.Security.Cryptography.Blake2" Version="1.1.0" />
+    <PackageReference Include="ScottBrady91.AspNetCore.Identity.Argon2PasswordHasher" Version="1.4.0" />
+    <PackageReference Include="Sodium.Core" Version="1.3.2" />
+  </ItemGroup>
+
 </Project>
