--- a/Avis/Avis.Services.Protection/Avis.Services.Protection.csproj
+++ b/Avis/Avis.Services.Protection/Avis.Services.Protection.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.11" />
+    <PackageReference Include="Sodium.Core" Version="1.3.2" />
   </ItemGroup>
 
 </Project>
