Changed database production

--- a/Avis/Avis.API/appsettings.json
+++ b/Avis/Avis.API/appsettings.json
@@ -20,5 +20,10 @@
     "LogLevel": {
       "Microsoft": "Error"
     }
+  },
+  "MongoDbOptions": {
+    "ConnectionString": "",
+    "DatabaseName": "",
+    "UserModelDatabaseName":""
   }
 }
